<?xml version="1.0"?>
<package>
  <name>tdmms_finder_auto</name>
  <version>0.1.0</version>
  <description>

     tdmms_finder_auto

  </description>
  <maintainer email="msatoru@iis.u-tokyo.ac.jp">Satoru Msaubuchi</maintainer>
  <author>Satoru Masubuchi</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>adm2</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>adm2</run_depend>
 </package>
