<?xml version="1.0"?>
<package>
  <name>stamper_sample_theta</name>
  <version>0.0.0</version>
  <description>The stamper_sample_theta package</description>

  <maintainer email="msatoru@iis.u-tokyo.ac.jp">Satoru Masubuchi</maintainer>
  <license>BSD</license>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend> 
  <buildtool_depend>catkin</buildtool_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
