<?xml version="1.0"?>
<package>
  <name>tdmms_autostamp_camera_viewer_guided</name>
  <version>0.1.0</version>
  <description>

     tdmms_autostamp_camera_viewer_guided

  </description>
  <maintainer email="msatoru@iis.u-tokyo.ac.jp">Satoru Masubuchi</maintainer>
  <author>Satoru Masubuchi</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>halcon_bridge</build_depend>

  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>halcon_bridge</run_depend>

 
</package>
