<?xml version="1.0"?>
<package>
  <name>tdmms_autostamp_master</name>
  <version>0.1.0</version>
  <description>

     tdmms_autostamp_master

  </description>
  <maintainer email="mlab2DMMS@gmail.com">mlab2DMMS</maintainer>
  <author>mlab2DMMS</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>

  <build_depend>halcon_bridge</build_depend>
  <run_depend>halcon_bridge</run_depend>
  <build_depend>transfer_linear_yamaha</build_depend>
  <run_depend>transfer_linear_yamaha</run_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
 
</package>
